@@ -4,6 +4,9 @@
    Link Octave instead of Matlab.
    Add comment about not being autogenerated.
    Minor changes to fit Scintilla order.
+ * src/build.c, src/build.h:
+   Replace GeanyBuildCommand::entries array with separate fields.
+   Similar to r5077 in the bs2 branch, but with less loop unrolling.
 
 
 2010-08-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
